Fix alignment issue of breadcrumb and session title

--- a/scss/nhse.scss
+++ b/scss/nhse.scss
@@ -397,6 +397,7 @@ body {
 @media (min-width: 768px) {
   .header-maxwidth {
     padding-left: 0;
+    max-width: 100%;
   }
 }
 
